p2ws_package/Devpp2ws-Package/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Photo__c</fullName>
        <label>Photo</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Allergic_Food__c</fullName>
        <label>Allergic Food</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <label>Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_External_Id_Trim__c</fullName>
        <description>Customer External Id that trim space and all character kept in lower case</description>
        <externalId>true</externalId>
        <label>Customer External Id Trim</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_External_Id__c</fullName>
        <description>External ID :Firstname, Lastname, Birthdate, Passport/Travel Number</description>
        <externalId>true</externalId>
        <label>Customer External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Psychology__c</fullName>
        <label>Customer Psychology</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diet_Preferences__c</fullName>
        <label>Diet Preferences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dislike__c</fullName>
        <label>Dislike (By In-Flight</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Rule__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Duplicate Rule</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_1__c</fullName>
        <label>Email 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLB__c</fullName>
        <description>Firstname + &apos;_&apos; + Lastname + &apos;_&apos;</description>
        <externalId>true</externalId>
        <label>FLB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLE__c</fullName>
        <description>FirstName + &apos;_&apos; + LastName + &apos;_&apos; + Email as ExternalID</description>
        <externalId>true</externalId>
        <label>FLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favorite_Drink__c</fullName>
        <label>Favorite Drink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favorite_Food__c</fullName>
        <label>Favorite Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <label>Information (By In-Flight)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Least_Preferred_Drink__c</fullName>
        <label>Least Preferred Drink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Least_Preferred_Food__c</fullName>
        <label>Least Preferred Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Like__c</fullName>
        <label>Like (By In-Flight)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Local_Name__c</fullName>
        <externalId>true</externalId>
        <label>Local Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailling_Address__c</fullName>
        <label>Mailling Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABW</fullName>
                </value>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>AGO</fullName>
                </value>
                <value>
                    <fullName>AIA</fullName>
                </value>
                <value>
                    <fullName>ALB</fullName>
                </value>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>ARE</fullName>
                </value>
                <value>
                    <fullName>ARG</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>ATG</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>AUT</fullName>
                </value>
                <value>
                    <fullName>AZE</fullName>
                </value>
                <value>
                    <fullName>BDI</fullName>
                </value>
                <value>
                    <fullName>BEL</fullName>
                </value>
                <value>
                    <fullName>BEN</fullName>
                </value>
                <value>
                    <fullName>BFA</fullName>
                </value>
                <value>
                    <fullName>BGD</fullName>
                </value>
                <value>
                    <fullName>BGR</fullName>
                </value>
                <value>
                    <fullName>BHR</fullName>
                </value>
                <value>
                    <fullName>BHS</fullName>
                </value>
                <value>
                    <fullName>BIH</fullName>
                </value>
                <value>
                    <fullName>BLR</fullName>
                </value>
                <value>
                    <fullName>BLZ</fullName>
                </value>
                <value>
                    <fullName>BMU</fullName>
                </value>
                <value>
                    <fullName>BOL</fullName>
                </value>
                <value>
                    <fullName>BRA</fullName>
                </value>
                <value>
                    <fullName>BRB</fullName>
                </value>
                <value>
                    <fullName>BRN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_children__c</fullName>
        <label>Number of children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROP_Adr_City_Name__c</fullName>
        <description>ROP address city name :TAIPEI</description>
        <label>ROP Adr City Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Adr_Country_Code__c</fullName>
        <description>ROP address country code :TW</description>
        <label>ROP Adr Country Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Adr_Line_1__c</fullName>
        <description>ROP address line 1 :No.14, Lane 302, Alley 1, Ming</description>
        <label>ROP Adr Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Adr_Line_2__c</fullName>
        <description>ROP address line 2 :Chang road, Ban-Chiao City,</description>
        <label>ROP Adr Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Adr_Line_3__c</fullName>
        <description>ROP address line 3 :Taipei Hsien, Taiwan. R.O.C.</description>
        <label>ROP Adr Line 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Adr_Postal__c</fullName>
        <description>ROP address postal code :11000</description>
        <label>ROP Adr Postal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Adr_Seq_No__c</fullName>
        <description>ROP address sequence number :Data :781320</description>
        <label>ROP Adr Seq No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Adr_Type__c</fullName>
        <description>ROP address type :Data :BUS</description>
        <label>ROP Adr Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Area_Code_2__c</fullName>
        <label>ROP Business Area Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Area_Code__c</fullName>
        <label>ROP Business Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Country_Code_2__c</fullName>
        <label>ROP Business Country Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Country_Code__c</fullName>
        <label>ROP Business Country Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Extension_2__c</fullName>
        <label>ROP Business Extension 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Extension__c</fullName>
        <label>ROP Business Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Phone_2__c</fullName>
        <label>ROP Business Phone 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Business_Phone__c</fullName>
        <label>Business Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Company_Name_1__c</fullName>
        <description>ROP company&apos;s name 1:R.S.B. Industrial Ltd.</description>
        <label>ROP Company Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Company_Name_2__c</fullName>
        <description>ROP company&apos;s name 2 :R.S.B. Industrial Ltd.</description>
        <label>ROP Company Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Diet_Preferences__c</fullName>
        <label>Diet Preferences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Email_1__c</fullName>
        <label>Email 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Email_2__c</fullName>
        <label>Email 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Favorite_Drink__c</fullName>
        <label>Favorite Drink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Favorite_Food__c</fullName>
        <label>Favorite Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Fax_2__c</fullName>
        <label>ROP Fax 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Fax_Area_Code__c</fullName>
        <label>ROP Fax Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Fax_Country_Code__c</fullName>
        <label>ROP Fax Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Fax_Extension__c</fullName>
        <label>ROP Fax Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Area_Code_2__c</fullName>
        <label>ROP Home Area Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Area_Code__c</fullName>
        <label>ROP Home Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Country_Code_2__c</fullName>
        <label>ROP Home Country Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Country_Code__c</fullName>
        <label>ROP Home Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Extension_2__c</fullName>
        <label>ROP Home Extension 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Extension__c</fullName>
        <label>ROP Home Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Phone_2__c</fullName>
        <label>ROP Home Phone 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Home_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ROP_Interests__c</fullName>
        <label>Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Least_Preferred_Drink__c</fullName>
        <label>Least Preferred Drink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Least_Preferred_Food__c</fullName>
        <label>Least Preferred Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Marriage</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROP_Mobile_2__c</fullName>
        <label>ROP Mobile 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Area_Code_2__c</fullName>
        <label>ROP Mobile Area Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Area_Code__c</fullName>
        <label>ROP Mobile Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Country_Code_2__c</fullName>
        <label>ROP Mobile Country Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Country_Code__c</fullName>
        <label>ROP Mobile Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Extension_2__c</fullName>
        <label>ROP Mobile Extension 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile_Extension__c</fullName>
        <label>ROP Mobile Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Mobile__c</fullName>
        <label>Mobile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Number__c</fullName>
        <externalId>true</externalId>
        <label>ROP Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Number_of_children__c</fullName>
        <label>Number of children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROP_Seat_Preference__c</fullName>
        <label>Seat Preference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Tier__c</fullName>
        <label>ROP Tier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat_Preference__c</fullName>
        <label>Seat Preference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Document_Expiry_Date__c</fullName>
        <label>Travel Document Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Document__c</fullName>
        <label>Travel Document</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>by_Ground_Customer_Service__c</fullName>
        <description>Displays the passenger psychological information written by ground service staff</description>
        <label>by Ground Customer Service</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>by_Sale_and_Marketing__c</fullName>
        <description>Customer Psychology by Sale and Marketing team</description>
        <label>by Sale and Marketing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
</CustomObject>